<resources>
    <string name="app_name">折扣計算器</string>
    <string name="present">打折</string>
    <string name="sale">折後價 :</string>
    <string name="money">原價 :</string>
    <string name="_0">(0 %) :</string>
    <string name="_00">$ 0</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="_5000">5000</string>
    <string name="clear">歸零</string>
    <string name="input">自訂</string>
    <string name="cancel">已取消</string>
    <string name="coin">請輸入金額</string>
</resources>
