<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:id="@+id/money"
            android:text="@string/money"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price"
            app:layout_constraintEnd_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>


    <TextView
            android:id="@+id/tv_price"
            android:layout_width="180sp"
            android:textSize="30sp"
            android:gravity="center"
            android:hint="@string/_00"
            android:textCursorDrawable="@null"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/money"
            app:layout_constraintEnd_toStartOf="@+id/btn_input"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>


    <Button
            android:id="@+id/btn_input"
            android:text="@string/input"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_shape"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Button.Inset"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>

    <Button
            android:id="@+id/btn_1"
            android:text="@string/_1"
            android:textColor="#FFFFFF"
            android:background="#B6421B"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_price"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_5"
            app:layout_constraintHorizontal_bias="1.0"/>

    <Button
            android:id="@+id/btn_5"
            android:text="@string/_5"
            android:background="#AC9595"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_1"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintEnd_toStartOf="@+id/btn_10"/>

    <Button
            android:id="@+id/btn_10"
            android:text="@string/_10"
            android:background="#AC9595"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_5"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintEnd_toStartOf="@+id/btn_50"/>

    <Button
            android:id="@+id/btn_50"
            android:text="@string/_50"
            android:background="#EEC143"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Button.Inset"
            app:layout_constraintTop_toTopOf="@+id/btn_10"
            app:layout_constraintStart_toEndOf="@+id/btn_10"
            app:layout_constraintEnd_toStartOf="@+id/btn_100"/>

    <Button
            android:id="@+id/btn_100"
            android:text="@string/_100"
            android:background="#E0608C"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Button.Inset"
            app:layout_constraintStart_toEndOf="@+id/btn_50"
            app:layout_constraintTop_toTopOf="@+id/btn_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="24dp"/>

    <Button
            android:id="@+id/btn_500"
            android:text="@string/_500"
            android:background="#DF6D66"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_1000"
            style="@android:style/Widget.Holo.Light.Button.Inset"/>

    <Button
            android:id="@+id/btn_1000"
            android:text="@string/_1000"
            android:background="#7586DF"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_500"
            app:layout_constraintStart_toEndOf="@+id/btn_500"
            app:layout_constraintEnd_toStartOf="@+id/btn_5000"
            style="@android:style/Widget.Holo.Light.Button.Inset"/>

    <Button
            android:id="@+id/btn_5000"
            android:text="@string/_5000"
            android:background="#8BC34A"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_1000"
            app:layout_constraintStart_toEndOf="@+id/btn_1000"
            style="@android:style/Widget.Holo.Light.Button.Inset"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"/>


    <Button
            android:id="@+id/btn_clear"
            android:text="@string/clear"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Button.Inset"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_5000"
            app:layout_constraintTop_toTopOf="@+id/btn_5000"/>


    <TextView
            android:id="@+id/tv_present"
            android:text="@string/present"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_500"/>

    <TextView
            android:id="@+id/tv_presentNum"
            android:hint="@string/_0"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_present"
            app:layout_constraintTop_toTopOf="@+id/tv_present"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/tv_sale"
            android:hint="@string/_00"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_presentNum"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_present"/>


    <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="250dp"
            android:layout_height="40dp"
            style="@style/seekbar"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_off"/>

    <TextView
            android:id="@+id/tv_off"
            android:text="@string/sale"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_present"
            app:layout_constraintStart_toStartOf="@+id/tv_present"/>

    <TextView
            android:id="@+id/tv_offNum"
            android:hint="@string/_00"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_off"
            app:layout_constraintTop_toTopOf="@+id/tv_off"/>


</android.support.constraint.ConstraintLayout>